--- a/trim2/index.html
+++ b/trim2/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
-	<title>IES Puerto de la Cruz</title>
+	<title>T&iacute;tulo del trabajo</title>
 </head>
 <body>
+<h1>T&iacute;tulo del trabajo</h1>
+<p>Componentes del grupo:</p>
+<h2>&Iacute;ndice</h2>
+<h1>Parte 1</h1>
+
 </body>
 </html>
