--- a/trim2/index.html
+++ b/trim2/index.html
@@ -3,10 +3,30 @@
 	<title>T&iacute;tulo del trabajo</title>
 </head>
 <body>
-<h1>T&iacute;tulo del trabajo</h1>
-<p>Componentes del grupo:</p>
-<h2>&Iacute;ndice</h2>
-<h1>Parte 1</h1>
-
+<table>
+  <tr>
+    <td>
+      <img src='./files/logo.png'/>
+    </td>
+    <td width='20px'></td>
+    <td>
+      <ul>
+        <li><b>T&iacute;tulo del trabajo</b> <i>Plantilla HTML entrega de trabajo</i></li>
+        <li>Componentes del grupo: <i>David Vargas</i></li>
+        <li>Curso Acad&eacute;mico: <i>2013/2014</i></li>
+        <li>Fecha de entrega: <i>1 de Enero de 2014</i></li>
+      </ul>
+    </td>
+  </tr>	
+</table>
+<hr>
+<a href='#bloque1'>Bloque 1</a> | <a href='#bloque2'>Bloque 2</a> | <a href='#final'>Conclusiones</a>
+<hr>
+<h1><a id='bloque1'>Bloque 1</a></h1>
+<p>Bla bla bla bla...</p>
+<h1><a id='bloque2'>Bloque 2</a></h1>
+<p>Bla bla bla bla...</p>
+<h1><a id='final'>Conclusiones</a></h1>
+<p>Bla bla bla bla...</p>
 </body>
 </html>
